# esp32-fast-can

./: platformio.ini
src/: main.cpp  old_can.xxx  sme_bug_with_feedback.xxx  working_on_reset.xxx
utilt/: CMakeLists.txt
utilt/include/: log.h  pm.h  rl.h
utilt/src/: main.c  old_can.c
